# Roomba

./: .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  docker_start.sh
maps/: explored_map.pgm  explored_map.yaml
src/coverage_planner/: package.xml  setup.py
src/coverage_planner/coverage_planner/: coverage_node.py  pipeline_manager.py
src/coverage_planner/launch/: full_pipeline.launch.py
src/fields2cover_ros/: CMakeLists.txt
src/fields2cover_ros/test/: CMakeLists.txt
src/ros2-autonomous-explorer/: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  package.xml
src/ros2-autonomous-explorer/config/: explore_rviz.rviz  nav2_explore_params.yaml  slam_params.yaml
src/ros2-autonomous-explorer/launch/: auto_explore.launch.py
src/ros2-autonomous-explorer/src/: frontier_explorer.py
src/ros2-autonomous-explorer/worlds/: robot_world.sdf
